[tool.poetry]
name = "ml_redis_docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "^1.0.2"
aioredis = "^2.0.1"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
locust = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
